--- a/ui/resources/public/index.html
+++ b/ui/resources/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.15.2/antd.min.css" integrity="sha512-sW2OY/VffZ3OJ9Gbps+88dLVF1w4FvxGkT4jJXqks04ERQj6FhQTc9DuD6n6UdeJp5zPRCGSFT7dhJHXSso63A==" crossorigin="anonymous" />
     <meta charset="UTF-8">
   </head>
   <body>
