change title on login page

--- a/ui/resources/public/index.html
+++ b/ui/resources/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.15.2/antd.min.css" integrity="sha512-sW2OY/VffZ3OJ9Gbps+88dLVF1w4FvxGkT4jJXqks04ERQj6FhQTc9DuD6n6UdeJp5zPRCGSFT7dhJHXSso63A==" crossorigin="anonymous" />
     <meta charset="UTF-8">
+    <title id="page-title">Amplifhir</title>
   </head>
   <body>
     <div id="app" class="h-100">
